--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
-body {
+header {
     background-color: #383D58;
+    color: white;
     }
-    body {
-        background-color: #383D58;
-        color: white;
-        }
