--- a/style.css
+++ b/style.css
@@ -21,3 +21,19 @@
 margin: 0 16px;
 font-size: 24px;
 }
+
+.escola-imagem{
+    width: 25%;
+}
+
+.escola{
+    background-image: linear-gradient(#383D58,#4ebfe9);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.escola-div-conteudo{
+    width: 35%;
+}
